--- a/design/templates/OpenGame/notes.tpl.html
+++ b/design/templates/OpenGame/notes.tpl.html
@@ -7,19 +7,20 @@
 </script>
 
 <form action="notes.php" name="note_form" id="note_form" method="POST">
-<input type="hidden" name="note_id_edit" id="note_id_edit" value="{NOTE_ID_EDIT}">
-<table width="519px">
+<input type="hidden" name="note_id_edit" id="note_id_edit" value="{NOTE_ID_EDIT}" />
+<input type="hidden" name="note_delete_range" id="note_delete_range" value="" />
+<table id="note_main_table">
   <!-- IF .note > 0 -->
   <tr>
     <th class="c_c" colspan="5">
       {L_sys_delete}
-      <select name="note_delete_range" onchange="jQuery('#note_delete').prop('disabled', jQuery(this).val() ? '' : 'disabled');">
+      <select class="note_delete_range">
         <option value="">{L_note_range_select}</option>
         <option value="marked">{L_note_range_marked}</option>
         <option value="marked_not">{L_note_range_marked_not}</option>
         <option value="all">{L_note_range_all}</option>
       </select>
-      <input type="submit" value="{L_note_delete}" name="note_delete" id="note_delete" disabled/>
+      <input type="submit" value="{L_note_delete}" name="note_delete" class="note_delete_button" disabled />
     </th>
   </tr>
   <!-- ENDIF -->
@@ -33,13 +34,13 @@
   <tr>
     <th class="c_c" colspan="5">
       {L_sys_delete}
-      <select name="note_delete_range" onchange="jQuery('#note_delete').prop('disabled', jQuery(this).val() ? '' : 'disabled');">
+      <select class="note_delete_range" onchange="jQuery('#note_delete').prop('disabled', jQuery(this).val() ? '' : 'disabled');">
         <option value="">{L_note_range_select}</option>
         <option value="marked">{L_note_range_marked}</option>
         <option value="marked_not">{L_note_range_marked_not}</option>
         <option value="all">{L_note_range_all}</option>
       </select>
-      <input type="submit" value="{L_note_delete}" name="note_delete" id="note_delete" disabled/>
+      <input type="submit" value="{L_note_delete}" name="note_delete" class="note_delete_button" disabled />
     </th>
   </tr>
   <!-- ENDIF -->
