--- a/design/templates/OpenGame/navbar.tpl.html
+++ b/design/templates/OpenGame/navbar.tpl.html
@@ -318,7 +318,7 @@
 <!-- ENDIF -->
 
 <!-- IF .note -->
-<table width=519 id="note_table" align="center">
+<table id="note_table" align="center" class="border_image_small">
   <tr>
     <th colspan=2 class="c_c">
       <a class="link" href="notes.php">{L_sys_notes}</a>
