FLEET-feat-41a4.0: Isolated `fleet_array` fields in table `fleets`

--- a/design/templates/OpenGame/notes.tpl.html
+++ b/design/templates/OpenGame/notes.tpl.html
@@ -1,6 +1,6 @@
 <h1>{PAGE_HEADER}</h1>
 
-<script type="text/javascript" src="js/sn_notes.js?{C_var_db_update}"></script>
+<script type="text/javascript" src="js/sn_notes.min.js?{C_var_db_update}"></script>
 <script type="text/javascript">
   var LA_note_new_title = '{LA_note_new_title}';
   var LA_note_new_text = '{LA_note_new_text}';
