UBE-misc-41a4.38: UBEv4.2 - Fully isolated moon calculations and data in the UBEMoonCalculator class

--- a/design/templates/OpenGame/ube_combat_report.tpl.html
+++ b/design/templates/OpenGame/ube_combat_report.tpl.html
@@ -112,7 +112,7 @@
               {L_ube_report_moon_reapers_died}
             <!-- ENDIF --><br />
           <!-- ENDIF -->
-        <!-- ELSEIF UBE_MOON == UBE_MOON_WAS -->
+        <!-- ELSEIF UBE_MOON == UBE_MOON_EXISTS -->
           {L_ube_report_moon_was}
         <!-- ELSE -->
           {L_ube_report_moon_chance} {UBE_MOON_CHANCE}%
