--- a/design/templates/OpenGame/ali_request_waiting.tpl.html
+++ b/design/templates/OpenGame/ali_request_waiting.tpl.html
@@ -1,8 +1,16 @@
-<br />
+<br/>
 <form action="" method=POST>
-<table width=519>
-  <tr><td class=c>{L_ali_req_title}</td></tr>
-  <tr><th>{request_text}</th></tr>
-  <tr><th><input type=submit name="bcancel" value="{L_ali_req_cancel}"></th></tr>
-</table>
+  <table width=519>
+    <tr>
+      <td class=c>{L_ali_req_title}</td>
+    </tr>
+    <tr>
+      <th>
+        {REQUEST_TEXT}
+      </th>
+    </tr>
+    <tr>
+      <th><input type=submit name="bcancel" value="{L_ali_req_cancel}"></th>
+    </tr>
+  </table>
 </form>
