ADMIN-misc-41a6.53: Rewrote chat edit and message list. Fixed PHP_NOTICE in flying fleets. Removed unused files

--- a/design/templates/OpenGame/admin/admin_ban.tpl.html
+++ b/design/templates/OpenGame/admin/admin_ban.tpl.html
@@ -7,7 +7,7 @@
     <tr><td class="c" colspan="2">{L_adm_bn_plto}</td></tr>
     <tr>
       <th width="129">{L_adm_bn_name}</th>
-      <th width="268"><input name="name" type="text" size="25" value="{name}" /></th>
+      <th width="268"><input name="name" type="text" size="25" value="{NAME}" /></th>
     </tr>
     <tr>
       <th>{L_adm_bn_reas}</th>
@@ -49,7 +49,7 @@
     </tr>
     <tr>
       <th width="129">{L_adm_unbn_name}</th>
-      <th width="268"><input name="name" maxlength="80" size="25" value="{name}" type="text"></th>
+      <th width="268"><input name="name" maxlength="80" size="25" value="{NAME}" type="text"></th>
     </tr>
     <tr>
       <th colspan="2"><input value="{L_adm_unbn_bnbt}" type="submit"></th>
