--- a/design/templates/OpenGame/admin/admin_tools.tpl.html
+++ b/design/templates/OpenGame/admin/admin_tools.tpl.html
@@ -1,9 +1,11 @@
 <h1>{L_adm_tools}</h1>
-<table>
-  <tr><th><a href="admin/tools.php?mode={D_ADM_TOOL_INFO_PHP}">phpinfo()</a></th></tr>
-  <tr><th><a href="admin/tools.php?mode={D_ADM_TOOL_INFO_SQL}">{L_adm_tool_sql_page_header}</a></th></tr>
-  <tr><th><a href="admin/tools.php?mode={D_ADM_TOOL_CONFIG_RELOAD}">{L_adm_tools_reloadConfig}</a></th></tr>
-  <tr><th><a href="admin/tools.php?mode={D_ADM_TOOL_MD5}">{L_adm_tool_md5_header}</a></th></tr>
-  <tr><th><a href="admin/tools.php?mode={D_ADM_TOOL_FORCE_LAST}">{L_adm_update_repeat}</a></th></tr>
-  <tr><th><a href="admin/tools.php?mode={D_ADM_TOOL_FORCE_ALL}">{L_adm_update_force}</a></th></tr>
-</table>
+<div class="market_services">
+  <div>
+    <a class="button_pseudo" href="admin/tools.php?mode={D_ADM_TOOL_INFO_PHP}">phpinfo()</a>
+    <a class="button_pseudo" href="admin/tools.php?mode={D_ADM_TOOL_INFO_SQL}">{L_adm_tool_sql_page_header}</a>
+    <a class="button_pseudo" href="admin/tools.php?mode={D_ADM_TOOL_CONFIG_RELOAD}">{L_adm_tools_reloadConfig}</a>
+    <a class="button_pseudo" href="admin/tools.php?mode={D_ADM_TOOL_MD5}">{L_adm_tool_md5_header}</a>
+    <a class="button_pseudo" href="admin/tools.php?mode={D_ADM_TOOL_FORCE_LAST}">{L_adm_update_repeat}</a>
+    <a class="button_pseudo" href="admin/tools.php?mode={D_ADM_TOOL_FORCE_ALL}">{L_adm_update_force}</a>
+  </div>
+</div>
