--- a/design/templates/OpenGame/fleet0.tpl.html
+++ b/design/templates/OpenGame/fleet0.tpl.html
@@ -19,7 +19,8 @@ var speed_factor   = {speed_factor};
 
 <h2>{L_fl_new_miss}</h2>
 <!-- IF MISSION_NAME -->
-  <h3>{TYPE_NAME} [{galaxy}:{system}:{planet}], {MISSION_NAME}<!-- IF IS_COLONIZATION -->, {L_sys_colonies} {COLONIES_CURRENT}/{COLONIES_MAX}<!-- ENDIF -->
+  <h3>
+    {TYPE_NAME} [{galaxy}:{system}:{planet}], {MISSION_NAME}<!-- IF target_mission == MT_COLONIZE -->, {L_sys_colonies} {COLONIES_CURRENT}/{COLONIES_MAX}<!-- ENDIF -->
   </h3>
 <!-- ENDIF -->
 
