--- a/design/templates/OpenGame/fleet_javascript.tpl.html
+++ b/design/templates/OpenGame/fleet_javascript.tpl.html
@@ -1,23 +1,28 @@
-<script type="text/javascript"><!--
-  var UNIVERSE_GALAXY_DISTANCE = {C_uni_galaxy_distance};
---></script>
-<script type="text/javascript" src="js/fleet.js?{C_var_db_update}"></script>
-<script type="text/javascript"><!--
-var fleets = Array();
-<!-- BEGIN fleets -->
-  fleets['{fleets.ID}'] = [[
-    <!-- BEGIN ships -->
-    ['{ships.NAME}', '{ships.AMOUNT}', '{ships.SPEED}', '{ships.CONSUMPTION}', '{ships.CAPACITY}', '{ships.ID}'],
-    <!-- END ships -->
-  ], ['{fleets.METAL}', '{fleets.CRYSTAL}', '{fleets.DEUTERIUM}']];
-<!-- END fleets -->
-var res_names = ['{LA_sys_metal}', '{LA_sys_crystal}', '{LA_sys_deuterium}'];
-jQuery.extend(language, {sys_fleet_composition: '{LA_sys_fleet_composition}', sys_ships: '{LA_sys_ships}', sys_resources: '{LA_sys_resources}', sys_capacity: '{LA_sys_capacity}'});
-
-var SHIP_SPY = {D_SHIP_SPY};
-
---></script>
 <script type="text/javascript">
+  var UNIVERSE_GALAXY_DISTANCE = parseInt("{C_uni_galaxy_distance}") ? parseInt("{C_uni_galaxy_distance}") : 0;
+</script>
+
+<script type="text/javascript" src="js/fleet.js?{C_var_db_update}"></script>
+
+<script type="text/javascript">
+  var planet_names = {};
+
+  var SHIP_SPY = parseInt("{D_SHIP_SPY}") ? parseInt("{D_SHIP_SPY}") : 0;
+
+  var fleet_capacity = parseInt("{fleet_capacity}") ? parseInt("{fleet_capacity}") : 0;
+
+  var res_names = ['{LA_sys_metal}', '{LA_sys_crystal}', '{LA_sys_deuterium}'];
+  jQuery.extend(language, {sys_fleet_composition: '{LA_sys_fleet_composition}', sys_ships: '{LA_sys_ships}', sys_resources: '{LA_sys_resources}', sys_capacity: '{LA_sys_capacity}'});
+
+  var fleets = Array();
+  <!-- BEGIN fleets -->
+    fleets['{fleets.ID}'] = [[
+      <!-- BEGIN ships -->
+      ['{ships.NAME}', '{ships.AMOUNT}', '{ships.SPEED}', '{ships.CONSUMPTION}', '{ships.CAPACITY}', '{ships.ID}'],
+      <!-- END ships -->
+    ], ['{fleets.METAL}', '{fleets.CRYSTAL}', '{fleets.DEUTERIUM}']];
+  <!-- END fleets -->
+
   var planet_types = {
     <!-- BEGIN possible_planet_type_id -->
     '{possible_planet_type_id.ID}': {
@@ -26,5 +31,4 @@ var SHIP_SPY = {D_SHIP_SPY};
     },
     <!-- END possible_planet_type_id -->
   };
-  var planet_names = {};
 </script>
