CODE-feat-41a7.33: Some fixes in JS and CSS for pass codacy tests

--- a/skins/EpicBlue/skin.css
+++ b/skins/EpicBlue/skin.css
@@ -182,7 +182,7 @@ div .ui-dialog-content table {
 }
 
 div.ui-slider-range {
-  background: #f6a828; !important;
+  background: #f6a828 !important;
 }
 
 /* Unit preview box on build pages */
