CODE-misc-41a8.2: Support for new Highspot

--- a/design/css/global.css
+++ b/design/css/global.css
@@ -216,6 +216,10 @@ textarea {
   height: 100%;
 }
 
+.h2em {
+  height: 2em;
+}
+
 /* Absolute Positioning */
 
 /* Fill container - usually images */
